# cneuromod.glm

./: .gitignore  CLAUDE.md  PLAN.md  README.md  invoke.yaml  pyproject.toml  tasks.py
analysis/: froi.py  glm.py  model_spec.py
models/: hcptrt.json  langlocalizer.json
notebooks/: fig1_froi_masks.ipynb  fig2_langloc_barcharts.ipynb  fig3_hcptrt_selectivity.ipynb  fig4_isc.ipynb  glm_results.ipynb
output_data/: CONTENT.md
source_data/: CONTENT.md
