[project]
name = "cneuromod-glm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "airoh",
    "invoke",
    "requests",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "nilearn>=0.10",
    "nibabel>=4.0",
    "numpy>=1.24",
    "datalad>=0.18",
]
